load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["machineremediationrequest_controller.go"],
    importpath = "github.com/openshift/machine-remediation-request-operator/pkg/controller/machineremediationrequest",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/machineremediationrequest/v1alpha1:go_default_library",
        "//pkg/utils:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/client:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/controller:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/handler:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/manager:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/reconcile:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/source:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["machineremediationrequest_controller_test.go"],
    embed = [":go_default_library"],
)
